Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/T8041704/ErrorMessageTest.out
ErrorMessageTest.java:10:25: compiler.err.cant.resolve.location: kindname.class, MISSING, , , (compiler.misc.location: kindname.class, ErrorMessageTest, null)
1 error
